sampa_Agosto_2020/istio/ingress_shop.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: shop-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-shop
      protocol: HTTP
    hosts:
    - "shop.DOMINIO"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shop-vs
  namespace: istio-system
spec:
  hosts:
  - "shop.DOMINIO"
  gateways:
  - shop-gateway
  http:
  - route:
    - destination:
        host: front-end.sock-shop.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: shop
  namespace: istio-system
spec:
  host: front-end.sock-shop.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
